# tiny-opengl-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/shaders/: fragment.fs  simpleTextureFShader.glsl  transformFShader.glsl  transformVShader.glsl  twoTexturesFShader.glsl  twoTexturesVShader.glsl  vertex.vs
assets/shaders/demo014/: vShader.glsl
assets/shaders/demo015/: fShader.glsl  vShader.glsl
assets/shaders/demo016/: fShader.glsl  vShader.glsl
examples/: CMakeLists.txt
examples/demo001/: CMakeLists.txt
examples/demo002/: CMakeLists.txt
examples/demo002/src/: main.cpp
examples/demo003/: CMakeLists.txt
examples/demo003/src/: main.cpp
examples/demo004/: CMakeLists.txt
examples/demo004/src/: main.cpp
examples/demo005/: CMakeLists.txt
examples/demo005/src/: main.cpp
examples/demo006/: CMakeLists.txt
examples/demo006/src/: mainScene.cpp  mainScene.h
examples/demo007/: CMakeLists.txt
examples/demo007/src/: main.cpp  mainScene.cpp
examples/demo008/: CMakeLists.txt
examples/demo008/src/: mainScene.cpp
examples/demo009/: CMakeLists.txt
examples/demo009/src/: mainScene.cpp
examples/demo010/: CMakeLists.txt
examples/demo010/src/: mainScene.cpp  mainScene.h
examples/demo011/: CMakeLists.txt
examples/demo011/src/: mainScene.cpp  mainScene.h
examples/demo012/: CMakeLists.txt
examples/demo012/src/: main.cpp  mainScene.cpp  mainScene.h
examples/demo013/: CMakeLists.txt
examples/demo013/src/: main.cpp  mainScene.cpp  mainScene.h
examples/demo014/: CMakeLists.txt
examples/demo014/src/: mainScene.cpp  mainScene.h
examples/demo015/src/: main.cpp  mainScene.cpp
examples/demo016/: CMakeLists.txt
examples/demo016/src/: mainScene.cpp  mainScene.h
examples/demo1/: CMakeLists.txt
examples/demo2/: CMakeLists.txt
examples/demo2/src/: main.cpp
include/rendering_engine/: application.h  camera.h  container.h  entity.h  eventManager.h  mesh.h  renderingContext.h  shader.h  texture.h  uniformGroup.h
src/: Box.cpp  Box.h  CMakeLists.txt  MainScene.cpp  MainScene.h  Triangle.cpp  Triangle.h  application.cpp  camera.cpp  container.cpp  entity.cpp  eventManager.cpp  main.cpp  mesh.cpp  shader.cpp  texture.cpp  uniformGroup.cpp
src/core/mesh/: Mesh.h
src/core/shader/: Shader.cpp  Shader.h
src/core/texture/: Texture.cpp  Texture.h
src/mesh/: Mesh.cpp  Mesh.h
src/object/: Object.h
src/scene/: Scene.cpp  Scene.h
src/shader/: Shader.cpp  Shader.h
