add_subdirectory(demo001)
add_subdirectory(demo002)
add_subdirectory(demo003)
add_subdirectory(demo004)
add_subdirectory(demo005)
add_subdirectory(demo006)
add_subdirectory(demo007)
add_subdirectory(demo008)
add_subdirectory(demo009)
add_subdirectory(demo010)
add_subdirectory(demo012)
add_subdirectory(demo013)
add_subdirectory(demo014)
add_subdirectory(demo015)
add_subdirectory(demo016)